--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "algoliasearch": "v5",
+    "instantsearch.css": "^8.5.1",
     "sass": "^1.78.0",
     "swiper": "^11.1.12",
     "vue": "^3.4.37",
+    "vue-instantsearch": "^4.14.4",
     "vue-router": "4"
   },
   "devDependencies": {
